# TinyInsta

./: .env  .gitignore  .pre-commit-config.yaml  LICENSE  docker-compose.yml  pyproject.toml  requirements.txt  shell.py
apps/core/: managers.py  models.py
apps/post/: admin.py  fields.py  managers.py  models.py  permissions.py  serializers.py  tests.py
apps/post/urls/: __init__.py  api.py  post.py
apps/post/views/: api.py
apps/user/: admin.py  backend.py  models.py  tasks.py
apps/user/urls/: __init__.py  auth.py  user.py
apps/user/views/: api.py  template.py
backend/: .env  pyproject.toml
backend/config/: settings.py
config/: celery.py  settings.py  urls.py
public/urls/: __init__.py  search.py
public/views/: template.py
templates/: home.html  login.html
templates/mail/: verify.html
templates/pages/: activate.html  verify_successful.html
templates/raw/: home.html  index.html
utils/: cache.py  mail.py
